--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,5 +39,13 @@
                        android:resource="@xml/widget" />
         </receiver>
 
+        <service
+                android:enabled="true"
+                android:name=".Services.BoundService">
+            <intent-filter>
+                <action android:name="com.intercall.ThreadingSamples.Services.BoundService" />
+            </intent-filter>
+        </service>
+
     </application>
 </manifest>
